@@ -2,6 +2,10 @@
 #                           nxAutoNuke - Change Log                            #
 ################################################################################
 
+nxAutoNuke v2.4.0 (not released yet):
+  NEW: Announce warning types for a release once, per execution and/or release.
+  CHG: Several options renamed, be sure to update your configuration file.
+
 nxAutoNuke v2.3.1 (Mar 6, 2006):
   NEW: Check for incomplete directory tags.
 
